Try my new python script to created the page

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -15,6 +15,18 @@ jobs:
     steps:
       - name: Download code
         uses: actions/checkout@v4
+      - name: Download portspage.py
+        uses: actions/checkout@v4
+        with:
+          repository: 'wawrzek/portspage.py'
+          path: 'python-utils'
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v4
+        with:
+          path: 'python-utils/requirements.txt'
+      - name: Update the page
+        run: |
+          python $PWD/portspages.py/main.py
       - name: Download Crux utils
         uses: joutvhu/download-s3@v1
         with:
