--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -26,7 +26,8 @@ jobs:
           path: 'python-utils/requirements.txt'
       - name: Update the page
         run: |
-          python $PWD/portspages.py/main.py
+          ls -l && pwd &&
+          python python-utils/portspages.py/main.py
       - name: Download Crux utils
         uses: joutvhu/download-s3@v1
         with:
