--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -26,7 +26,7 @@ jobs:
           path: 'python-utils/requirements.txt'
       - name: Update the page
         run: |
-          ls -l $HOME &&
+          ls -Rl $HOME &&
           python $HOME/work/python-utils/portspages.py/main.py
       - name: Download Crux utils
         uses: joutvhu/download-s3@v1
