--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -19,15 +19,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: 'wawrzek/portspage.py'
-          path: 'python-utils'
+          path: '../python-utils'
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v4
         with:
-          path: 'python-utils/requirements.txt'
+          path: '../python-utils/requirements.txt'
       - name: Update the page
         run: |
           ls -Rl . &&
-          python ./python-utils/main.py
+          python ../python-utils/main.py
       - name: Download Crux utils
         uses: joutvhu/download-s3@v1
         with:
