--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Download code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Install cruxpy package
         run: |
           pip install cruxpy
