--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,6 +13,14 @@ jobs:
     steps:
       - name: Download code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Install cruxpy package
+        run: |
+          pip install cruxpy
+      - name: Update the portspage
+        run: |
+          python portspage.py
       - name: Download Crux utils
         uses: joutvhu/download-s3@v1
         with:
